# ConData

./: CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.trae/documents/: database-connector-plan.md  database_and_schema_features_plan.md  github-actions-build-plan.md  security_improvements_plan.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  query.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/models/: connection.rs  mod.rs  query.rs  security.rs
src-tauri/src/services/: connection_manager.rs  mod.rs  postgres_service.rs
src/api/: index.ts
src/components/common/: AppHeader.vue
src/components/connection/: ConnectionForm.vue  ConnectionList.vue
src/components/query/: QueryEditor.vue  QueryHistory.vue  QueryResult.vue  TableDetail.vue
src/composables/: useFeedback.ts
src/router/: index.ts
src/stores/: connection.ts  query.ts  theme.ts
src/types/: index.ts
src/views/: ConnectionView.vue  HomeView.vue  QueryView.vue
